<resources>
    <string name="app_name">Automatic</string>
    <string name="action_settings">Settings</string>

    <string name="preference_auth_settings">Authentication</string>
    <string name="preference_auth_type">Type</string>
    <string name="preference_auth_type_summary">Bearer</string>
    <string name="preference_auth_token">Token</string>
    <string name="preference_auth_token_summary">Please input your token here!</string>

    <string name="auth_fail_title">Authentication Failed</string>
    <string name="auth_fail_content">Go to Settings to set your auth type and token?</string>
    <string name="auth_fail_positive">OK</string>
    <string name="auth_fail_negative">Cancel</string>

    <string name="first_time_title">Setup Authentication Token</string>
    <string name="first_time_content">Please input your token:</string>
    <string name="first_time_positive">OK</string>
    <string name="first_time_negative">Cancel</string>
    <string name="first_time_hint">e5cdd2a2f2c52ac2ff9825f53ac566f45c513991</string>
    <string name="first_time_fill">""</string>

    <string name="check_token_title">Checking Authentication Token</string>
    <string name="check_token_content">Checking your token</string>

    <string name="Sort">Sort</string>
    <string name="choose">Choose</string>
    <string name="title_activity_maps">Map</string>

    <string name="load_more_data">Loading trip data</string>

    <string name="divider">Divider</string>
    <string name="com.optimizely.api_key" translatable="false">AANLYFYBWfZHRi5ZWY6WlJ8z_70Jiedx~4667690599</string>
</resources>
